--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,11 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/michael/anaconda3/envs/py27/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/michael/anaconda3/envs/py27/lib/python2.7/site-packages/sklearn/learning_curve.py:22: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the functions are moved. This module will be removed in 0.20\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -83,26 +105,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105,000.00\n",
+      "Maximum price: $1,024,800.00\n",
+      "Mean price: $454,342.94\n",
+      "Median price $438,900.00\n",
+      "Standard deviation of prices: $165,340.28\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = None\n",
+    "minimum_price = prices.min()\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = None\n",
+    "maximum_price = prices.max()\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = None\n",
+    "mean_price = prices.mean()\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = None\n",
+    "median_price = prices.median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = None\n",
+    "std_price = prices.std()\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -136,7 +170,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "I would expect the following trends:\n",
+    "\n",
+    "* More rooms is usually a desired feature. Normally I would also expect more rooms is an indication of more space. Therefore I believe that a higher `RM` would mean a higher `MEDV`. I would expect a high correlation.\n",
+    "\n",
+    "* From my limited experience, those of us with a higher salary tend to cluster together in \"nice areas\". As those of us with a lower salary cannot afford to live in these \"nice areas\", I would expect a low `LSTAT` value would mean a higher `MEDV`. I would expet a medium correlation.\n",
+    "\n",
+    "* For those of us with kids, more teachers per student would be desired. However, I have no insight in whether or not this a key parameter when it comes to deciding where to live. My guess would therefore be that a low `PTRATIO` would lead to a higher `MEDV`, but that the correlation is medium to low."
    ]
   },
   {
@@ -165,20 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO: Import 'r2_score'\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
     "    \n",
-    "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
-    "    score = None\n",
+    "    score = r2_score(y_true, y_predict)\n",
     "    \n",
     "    # Return the score\n",
     "    return score"
@@ -653,21 +694,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
