--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,38 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michael/anaconda3/envs/py27/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Boston housing dataset has 489 data points with 4 variables each.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michael/anaconda3/envs/py27/lib/python2.7/site-packages/sklearn/learning_curve.py:22: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the functions are moved. This module will be removed in 0.20\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.cross_validation import ShuffleSplit\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "# DEPRECATED\n",
+    "# from sklearn.cross_validation import ShuffleSplit\n",
     "\n",
     "# Import supplementary visualizations code visuals.py\n",
     "import visuals as vs\n",
@@ -105,37 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Statistics for Boston housing dataset:\n",
-      "\n",
-      "Minimum price: $105,000.00\n",
-      "Maximum price: $1,024,800.00\n",
-      "Mean price: $454,342.94\n",
-      "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TODO: Minimum price of the data\n",
     "minimum_price = prices.min()\n",
-    "\n",
-    "# TODO: Maximum price of the data\n",
     "maximum_price = prices.max()\n",
-    "\n",
-    "# TODO: Mean price of the data\n",
     "mean_price = prices.mean()\n",
-    "\n",
-    "# TODO: Median price of the data\n",
     "median_price = prices.median()\n",
-    "\n",
-    "# TODO: Standard deviation of prices of the data\n",
     "std_price = prices.std()\n",
     "\n",
     "# Show the calculated statistics\n",
@@ -207,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -246,9 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the performance of this model\n",
@@ -274,7 +227,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The dataset is quite small, but I would say that the model captures the target data quite well, as it gives a positive value close to $1$. Said in a different way, if the squared distance between the model and the datapoints were only $7.7 \\%$ closer, they would be identical. This may not be desired as the \"true values\" may have measurement errors in them."
    ]
   },
   {
@@ -294,15 +249,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Import 'train_test_split'\n",
+    "# DEPRECATED\n",
+    "# from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Features\n",
+    "X = data[[\"RM\", \"LSTAT\", \"PTRATIO\"]]\n",
+    "features = X\n",
+    "# Target variable\n",
+    "y = prices\n",
     "\n",
     "# TODO: Shuffle and split the data into training and testing subsets\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42, shuffle=True)\n",
     "\n",
     "# Success\n",
     "print \"Training and testing split was successful.\""
@@ -323,7 +284,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "Usually: The more data to train on, the better (at least up to the saturation point). However, in order to check how well our model is performing, we need to test it against something. We can test it against a part of our original data set. We would like a test which can tell us how well our model is performing. The more data to test against, the better feeling we would have about the model. On the other hand, the less data to train on, the poorer performance we expect. This can be called *underfitting* the data (i.e. there is not enough information or complexity in our model to capture the underlying trends in our data).\n",
+    "\n",
+    "If we do not make the split, but test on the trained data, the labelling of the data we test on has already occured. This means that the model has learned to incorporate the test data in the model, and we would expect that the test would be somewhat good. However, if we use this model on unseen data, we would generally not expect good performance as it has learned the seen data \"by heart\". This situation is referred to as overfitting."
    ]
   },
   {
@@ -350,7 +315,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -376,7 +340,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* `max_depth = 1`:\n",
+    "    * *Diagnosis:* As both the training score and testing score converges to a low score, this seems to be underfitted.\n",
+    "    * *Effect of more training points for the training score:* After around $100$ points the curve starts to saturate.\n",
+    "    * *Effect of more training points for the testing score:* After around $100$ points the curve starts to saturate.\n",
+    "    * *More trainingpoints benefitial:* Both curves are relative stable for high number of training points. Adding more points does not to seem to help.\n",
+    "    \n",
+    "* `max_depth = 3`:\n",
+    "    * *Diagnosis:* This depth is approaching optimal as both curves saturates at a relatively high score.\n",
+    "    * *Effect of more training points for the training score:* A slower saturation than the `max_depth = 1` case.\n",
+    "    * *Effect of more training points for the testing score:* A slower saturation than the `max_depth = 1` case.\n",
+    "    * *More trainingpoints benefitial:* I would say that the curve saturates around $150$.\n",
+    "    \n",
+    "* `max_depth = 6`:\n",
+    "    * *Diagnosis:* The curves does not converge, and the test score is lower although the training score is high. This is a typical sign of overfitting.\n",
+    "    * *Effect of more training points for the training score:* The curve is relatively flat for all numbers of training points.\n",
+    "    * *Effect of more training points for the testing score:* After around $150$ points the curve starts to saturate.\n",
+    "    * *More trainingpoints benefitial:* Both curves are relative stable for high number of training points. Adding more points does not to seem to help.\n",
+    "    \n",
+    "* `max_depth = 10`:\n",
+    "    * *Diagnosis:*  This seems to be overfitting even worse than the previous case.\n",
+    "    * *Effect of more training points for the training score:* The curve is more or less flat, with higher values than in the previous case.\n",
+    "    * *Effect of more training points for the testing score:* After around $150$ points the curve starts to saturate.\n",
+    "    * *More trainingpoints benefitial:* Both curves are relative stable for high number of training points. Adding more points does not to seem to help.\n",
+    "    \n",
+    "* **Would it be necessary with more points:** We can see that we gain minimal in terms of score when adding more points. If the training is computationally heavy, training on a high number of training points should be avoided."
    ]
   },
   {
@@ -392,9 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vs.ModelComplexity(X_train, y_train)"
@@ -415,7 +403,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* *Max depth 1*: High bias.\n",
+    "* *Max depth 10*: High variance. From the standard deviation we can see that there is a large spread in the data."
    ]
   },
   {
@@ -433,7 +424,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "\n",
+    "It seems like a `max_depth` of $3$ is optimal in this case. I base this on the approximate global maximum of the validation score curve (taken into account that the standard deviation here is not too big). It could be that `max_depth = 4` is marginally better, but here I would choose simplicity over complexity."
    ]
   },
   {
@@ -461,7 +455,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* The grid search technique is a technique where you test different models only varying in parameter space. Each model is trained and evaluated using a cross-validation technique in order to find the optimal model. For example you can vary the `maximum_depth` in decision tree models, or the `C` and `gamma` value in support vector machine techniques.\n",
+    "* The grid search technique is nothing but a systematic way to optimize a model depening on the combinations of the inputs given by the user.\n"
    ]
   },
   {
@@ -483,7 +480,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* If we just have a testing and training set, we could tweak the parameters the perform well on the test set, and thus let information of the test set leak into the training set. This can be avoided by splitting the training data again into a smaller set of training data, and a cross-validation set. The training can now be tweaked to fit the cross-validation, and then be tested on the yet untouched test set. However, by doing this split we have less data to train on. A solution could be to split the original training set into $k-1$ folds. One can train on $k-2$ folds, and test it against the remaining fold of the training set. Which of the $k-2$ sets used for as the \"testing fold\" will be cyclical permuted so that all the folds have at some time been used as the \"test fold\". The errors for each model is averaged, and the model with the lowest error would be the optimal. This is then testing against the original testing set to measure metric such as accuracy.\n",
+    "* Although computationally heavy, by performing the cross validation on all the points the user has specified in the parameter space, one would have a rigorous way of testing what set of parameter is optimal for the model."
    ]
   },
   {
@@ -516,30 +516,22 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import make_scorer\n",
+    "# DEPRECATED\n",
+    "# from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "def fit_model(X, y):\n",
     "    \"\"\" Performs grid search over the 'max_depth' parameter for a \n",
     "        decision tree regressor trained on the input data [X, y]. \"\"\"\n",
     "    \n",
     "    # Create cross-validation sets from the training data\n",
-    "    # sklearn version 0.18: ShuffleSplit(n_splits=10, test_size=0.1, train_size=None, random_state=None)\n",
-    "    # sklearn versiin 0.17: ShuffleSplit(n, n_iter=10, test_size=0.1, train_size=None, random_state=None)\n",
-    "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
-    "\n",
-    "    # TODO: Create a decision tree regressor object\n",
-    "    regressor = None\n",
-    "\n",
-    "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {}\n",
-    "\n",
-    "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
-    "    scoring_fnc = None\n",
-    "\n",
-    "    # TODO: Create the grid search cv object --> GridSearchCV()\n",
-    "    # Make sure to include the right parameters in the object:\n",
-    "    # (estimator, param_grid, scoring, cv) which have values 'regressor', 'params', 'scoring_fnc', and 'cv_sets' respectively.\n",
-    "    grid = None\n",
+    "    cv_sets = ShuffleSplit(n_splits = 10, test_size = 0.20, random_state = 0)   \n",
+    "    regressor = DecisionTreeRegressor()\n",
+    "    params = {'max_depth':range(1,11)}\n",
+    "    scoring_fnc = make_scorer(performance_metric)\n",
+    "    grid = GridSearchCV(regressor, params, scoring = scoring_fnc, cv = cv_sets)\n",
     "\n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
     "    grid = grid.fit(X, y)\n",
@@ -571,7 +563,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -587,9 +578,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Hint: ** The answer comes from the output of the code snipped above.\n",
+    "** Hint: ** The answer comes from the output of the code snipped above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer: **\n",
     "\n",
-    "**Answer: **"
+    "* The optimal depth is $4$. As discussed in **Question 6**, the optimal model had a depth between $3$ and $4$. As $4$ was just marginally better than $3$ I argued that a depth of $3$ would result in a less complex model which also runs (just a bit) faster."
    ]
   },
   {
@@ -616,9 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Produce a matrix for client data\n",
@@ -635,7 +631,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* Recommended prices:\n",
+    "    * *Client 1*: $\\$405,000$\n",
+    "    * *Client 2*: $\\$240,000$\n",
+    "    * *Client 3*: $\\$935,000$\n",
+    "* Reasonability:\n",
+    "    * *Client 1*: This is an increase in around $0.5 \\%$ of the suggested value (I do like round numbers). This seems reasonable if we look at the data for data[data[\"MEDV\"].between(400000, 410000)].\n",
+    "    * *Client 2*: This is an increase in around $1 \\%$ of the suggested value (again to get round numbers). By looking at `data[data[\"MEDV\"].between(200000, 250000)]`. We should maybe not push the prices up to high as both `PTRATIO` and `LSTAT` is not that good considering the price range.\n",
+    "    * *Client 3*: This is an increase in around $0.4 \\%$ of the suggested value. By inspecting `data[data[\"MEDV\"] > 900000]`, we can observe that this price is in the rigth ballpark, although the demand for `PTRATIO` og `LSTAT` is are a bit higher than the given data. Depending on the view and traffic etc. in the area, one could argue that one could push the price up even further.   "
    ]
   },
   {
@@ -651,9 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vs.PredictTrials(features, prices, fit_model, client_data)"
@@ -679,7 +682,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* *Relevance today*: I would say that these data are too old to be applicable today. To my understanding a lot has happend in the housing market since then. For example the 2008 financial crisis would affect the market. Influation would aslo affect the marked to some degree.\n",
+    "* *Sufficient features*: Before adding another feature into the data I would try to make some simple test on how much effect it has on the data. If there exists enough data to keep other parameters relatively constant and check how much the price changing by changing only one variable. Note that this is only a simple test, and could give us a clue on how important the parameter is. Although the listed elements affect the price, I think some of them are already indirectly captured in the features already present.\n",
+    "* *Robust*: For the values within the ranges trained on I would expect the model to be somewhat coarse (as decision trees are quite simple) but robust.\n",
+    "* *Applicability to rural cities*: I thinkg there is little applicability to rural cities and proximity to jobs, shops, transport etc. is a key player in setting the price. The price per square meter tends to be quite higher in the cities, and I would assume that the variation in the data is larger in the cities.\n",
+    "* *Fair to jugde by characteristics of neighborhood*: It's maybe not fair in the sense that it could cause run-away effects and division of social classes. However, it is an effective tool based on human psychology. We tend to want the best for us and ours, so if we have the chance to improve our situation we tend to do so by for example seeking higher class neighbourhoods.\n",
+    "\n",
+    "*Conclusion*: If the data was more up to date I think the data set could be used in a real-world setting."
    ]
   },
   {
